--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -40,7 +40,7 @@
     {{ form_end(findMesSortiesForm) }}
     <br>
     {% if sorties | length > 0 %}
-        <div class="table-responsive pre-scrollable">
+        <div class="table-responsive pre-scrollable table-bordered table-info">
             <table class="table table-striped">
                 <thead>
                 <tr>
@@ -56,7 +56,7 @@
                 </thead>
                 {% for sortie in sorties %}
                     <tr>
-                        <td><a href="{{ path('sortie_detail', {id: sortie.id}) }}">{{ sortie.nom }}</a></td>
+                        <td>{{ sortie.nom }}</td>
                         <td>{{ sortie.dateHeureDebut | date('d/m/y') }}</td>
                         <td>{{ sortie.dateLimiteInscription | date('d/m/y') }}</td>
                         <td class="text-center">{{ sortie.inscriptions | length }} /
@@ -64,20 +64,172 @@
                         </td>
                         <td>{{ sortie.etat.libelle }}</td>
                         <td class="text-center">
-                        {% for numSortie in numeroSortie %}
-                            {% if numSortie == sortie.id %}
-                               X
+                            {% set inscrit = false %}
+                            {% for numSortie in numeroSortie %}
+                                {% if numSortie == sortie.id %}
+                                    {% set inscrit = true %}
+                                {% endif %}
+                            {% endfor %}
+                            {% if inscrit == true %}
+                                X
                             {% endif %}
-                        {% endfor %}
                         </td>
                         <td>
                             <a href="{{ path('profile', {pseudo: sortie.organisateur.pseudo}) }}">{{ sortie.organisateur.prenom }}
                                 {{ sortie.organisateur.nom | slice(0,1) }}.</a>
+                        </td>
+                        {# Affichage dans la colonne 'Actions' #}
+                        <td>
+                            {% set inscrit = false %}
+                            {% for numSortie in numeroSortie %}
+                                {% if numSortie == sortie.id %}
+                                    {% set inscrit = true %}
+                                {% endif %}
+                            {% endfor %}
+                            {# Si l'utilisateur est inscrit #}
+                            {% if inscrit == true %}
+                                {# Si l'utilisateur est l'organisateur de la sortie #}
+                                {% if sortie.organisateur.pseudo == app.user.pseudo %}
+                                    Modif' de l'affichage suivant l'état de la sortie
+                                    {% if sortie.etat.libelle == 'créée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Modifier</a> - <a>Publier</a>
+                                    {% elseif sortie.etat.libelle == 'activité en cours' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'passée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'annulée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% else %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher/Se désister</a> -
+                                        <a href="{{ path('sortie_delete',{id: sortie.id}) }}">
+                                            Annuler</a>
+                                    {% endif %}
+                                {% else %}
+                                    {# Si l'utilisateur n'est pas l'organisateur de la sortie #}
+                                    {% if sortie.etat.libelle == 'créée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'activité en cours' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'passée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'annulée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% else %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher/Se désister</a>
+                                    {% endif %}
+                                {% endif %}
+                            {% else %}
+                                {# Si l'utilisateur n'est pas inscrit #}
+                                {# Si l'utilisateur est l'organisateur de la sortie #}
+                                {% if sortie.organisateur.pseudo == app.user.pseudo %}
+                                    Modif' de l'affichage suivant l'état de la sortie
+                                    {% if sortie.etat.libelle == 'créée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Modifier</a> - <a>Publier</a>
+                                    {% elseif sortie.etat.libelle == 'activité en cours' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'passée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'annulée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% else %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher/S'inscrire</a> -
+                                        <a href="{{ path('sortie_delete',{id: sortie.id}) }}">
+                                            Annuler</a>
+                                    {% endif %}
+                                {% else %}
+                                    {# Si l'utilisateur n'est pas l'organisateur de la sortie #}
+                                    {% if sortie.etat.libelle == 'créée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'activité en cours' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'passée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'annulée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% elseif sortie.etat.libelle == 'clôturée' %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher</a>
+                                    {% else %}
+                                        <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                            Afficher/S'inscrire</a>
+                                    {% endif %}
+                                {% endif %}
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
             </table>
         </div>
     {% endif %}
-
+    <br>
+    <a class="btn btn-primary" href="{{ path('sortie') }}">Créer une sortie</a>
+    <br>
+    <br>
 {% endblock %}
+
+   {#                            #}{# Si l'utilisateur est l'organisateur de la sortie #}
+                        {#                            {% if sortie.organisateur.pseudo == app.user.pseudo %}#}
+                        {#                                #}{# Modif' de l'affichage suivant l'état de la sortie #}
+                        {#                                {% if sortie.etat.libelle == 'créée' %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Modifier</a> - <a>Publier</a>#}
+                        {#                                {% elseif sortie.etat.libelle == 'passée' %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Afficher</a>#}
+                        {#                                {% elseif sortie.etat.libelle == 'annulée' %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Afficher</a>#}
+                        {#                                {% elseif sortie.etat.libelle == 'activité en cours' %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Afficher</a>#}
+                        {#                                {% else %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Afficher</a> -#}
+                        {#                                    <a href="{{ path('sortie_delete',{id: sortie.id}) }}">#}
+                        {#                                        Annuler</a>#}
+                        {#                                {% endif %}#}
+                        {#                                #}{# Si l'utilisateur n'est pas l'organisateur de la sortie #}
+                        {#                            {% else %}#}
+                        {#                                {% if sortie.etat.libelle == 'activité en cours' %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Afficher</a>#}
+                        {#                                {% elseif sortie.etat.libelle == 'ouverte' %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Afficher</a> -#}
+                        {#                                    {% if inscrit == true %}#}
+                        {#                                        <a href="{{ path('inscriptionDelete',{id: sortie.id}) }}">#}
+                        {#                                            S'inscrire</a>#}
+                        {#                                    {% else %}#}
+                        {#                                        <a href="{{ path('inscriptionDelete',{id: sortie.id}) }}">#}
+                        {#                                            Se désister</a>#}
+                        {#                                    {% endif %}#}
+                        {#                                {% elseif sortie.etat.libelle == 'clôturée' %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Afficher</a> -#}
+                        {#                                    <a href="{{ path('inscriptionDelete',{id: sortie.id}) }}">#}
+                        {#                                        Se désister</a>#}
+                        {#                                {% else %}#}
+                        {#                                    <a href="{{ path('sortie_detail', {id: sortie.id}) }}">#}
+                        {#                                        Afficher</a>#}
+                        {#                                {% endif %}#}
+                        {#                            {% endif %}#}
+                        {#                        </td>#}
